--- a/conf/ldap.toml
+++ b/conf/ldap.toml
@@ -5,7 +5,7 @@ verbose_logging = false
 # Ldap server host
 host = "127.0.0.1"
 # Default port is 389 or 636 if use_ssl = true
-port = 389
+port = '389'
 # Set to true if ldap server supports TLS
 use_ssl = false
 # set to true if you want to skip ssl cert validation
